--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,6 @@
 language: ruby
-
 rvm:
   - 2.0.0
   - 1.9.3
-  - 1.9.2
-  - jruby-18mode
   - jruby-19mode
-  - ruby-head
-  - jruby-head
-  - 1.8.7
-  - ree
+  - rbx-2.1.1
